test: treewide: Fix issues flagged by Sonar